--- a/css/global.css
+++ b/css/global.css
@@ -407,6 +407,7 @@ textarea {
 	font-family: "HelveticaNeueBold", Helvetica, Arial, sans-serif;
 }
 #signin .remember-area {
+	float:left;
 	position:relative;
 	padding-left: 25px;
 	font-size: 12px;
