--- a/css/ie.css
+++ b/css/ie.css
@@ -4,3 +4,6 @@
 .submit {
 	filter: dropshadow(color=#000000, offx=1, offy=0);
 }
+header .secondary-nav-contents ul li a {
+	filter: dropshadow(color=#000000, offx=0, offy=1);
+}
