--- a/css/accordion.css
+++ b/css/accordion.css
@@ -46,8 +46,7 @@
 .accordion-box .ui-accordion-content h3 {
 	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
 	color: #00919E;
-	margin: -20px -30px 0;
-	padding: 20px 30px 20px;
+	padding: 20px 0 20px;
 	border-bottom: 1px solid #E7E5E3;
 }
 
