--- a/css/global.css
+++ b/css/global.css
@@ -16,6 +16,9 @@ a {
 .error {
 	color: #e34848;
 }
+.dialog {
+	display:none;
+}
 .left {
 	float:left;
 }
@@ -67,12 +70,6 @@ footer a {
 	text-decoration: none;
 }
 /**
- * jQuery UI Dialog
- */
-.ui-dialog {
-	
-}
-/**
  * Forms
  */
 
@@ -91,6 +88,7 @@ button.submit {
 	padding: 0;
 	margin: 0;
 	background: none;
+	overflow:visible;
 }
 button.submit span {
 	height: 37px;
@@ -148,6 +146,8 @@ input.autoclear {
 	color: #aeaeae;
 	background: none no-repeat scroll 0 0 #F2F2F2;
 }
+
+
 .form-element textarea {
 	width:420px;
 	float:left;
@@ -165,6 +165,7 @@ input.autoclear {
 	width: 220px;
 }
 .form-element {
+	clear:left;
 	float:left;
 }
 fieldset.form-element {
@@ -193,7 +194,7 @@ fieldset.form-element {
 }
 
 .form-element-with-notes .notes {
-	float: right;
+	float: left;
 	width: 140px;
 	font-size: 10px;
 	padding-left: 20px;
@@ -210,6 +211,38 @@ fieldset.form-element {
 	float:left;
 }
 
+
+/**
+ * Two-column layouts
+ */
+.two-column {
+	position:relative;
+	font-size:12px;
+	color: #666666;
+	padding: 10px 0 0 200px;
+	
+}
+.two-column .label-column {
+	position:absolute;
+	top: 10px;
+	left: 0;
+	width: 190px;
+	text-align:right;
+}
+
+.two-column select {
+	margin-left:15px;
+}
+
+.two-column label {
+	font-size:12px;
+	color: #666666;
+	margin: 0 0 5px;
+	display:block;
+}
+.two-column label input {
+	margin-right: 10px;
+}
 /**
  * shared modular style-rules
  */
