--- a/css/jquery.ui.css
+++ b/css/jquery.ui.css
@@ -433,6 +433,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
  * http://docs.jquery.com/UI/Dialog#theming
  */
 .ui-dialog { position: absolute; padding: 0; width: 300px; overflow: hidden; }
+.ui-dialog p { clear:left;  }
 .ui-dialog .ui-dialog-titlebar { padding: 15px 20px 0; position: relative; border: none; border-bottom: 1px solid #BFC3C5; height: 30px; font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif; color: #444444; font-size: 16px; }
 .ui-dialog .ui-dialog-title { float: left; margin: .1em 16px .1em 0; } 
 .ui-dialog .ui-dialog-titlebar-close { position: absolute; right: 13px; top: 13px; width: 20px; margin: 0; padding: 0; height: 20px; background: url(../images/button_dialog_close.png) no-repeat scroll 0 0 transparent; }
