--- a/css/date.css
+++ b/css/date.css
@@ -1,4 +1,4 @@
-.date-manager {
+fieldset.date-manager {
 	position: relative;
 	display: block;
 	height: 55px;
@@ -84,8 +84,8 @@
 	background-color: #00bfd1;
 }
 .blue-green {
-	background-color: #82ca9d;
+	background-color: #a2cd68;
 }
 .green {
-	background-color: #acd373;
+	background-color: #6eb576;
 }
