--- a/css/nav.css
+++ b/css/nav.css
@@ -5,7 +5,7 @@ header {
 header .primary-nav-contents
 {
 	background: url(../images/bkgd_nav_primary_tile.png) repeat-x scroll 0 0 #FFFFFF;
-	z-index: 1003;
+	z-index: 1002;
 }
 header .primary-nav-contents,
 header .secondary-nav-contents {
@@ -97,7 +97,8 @@ header .secondary-nav-contents ul li a {
 	-moz-transition: color 0.25s;
 	-webkit-transition: color 0.25s;
 }
-header .secondary-nav-contents ul li a:hover {
+header .secondary-nav-contents ul li a:hover,
+header .secondary-nav-contents ul li a.active {
 	color: #FFFFFF;
 }
 header #logo {
