--- a/css/ie.css
+++ b/css/ie.css
@@ -1,3 +1,6 @@
+/* This File is for IE < 9.
+ * THIS IS NOT FOR IE9. there is an ie9.css for that
+ */
 #background-image {
 	filter:alpha(opacity=80);
 }
@@ -6,4 +9,10 @@
 }
 header .secondary-nav-contents ul li a {
 	filter: dropshadow(color=#000000, offx=0, offy=1);
+}
+button.submit:active span {
+/*	border: none;*/
+	top: 1px; 
+	right: -10px;
+
 }
