--- a/css/ie.css
+++ b/css/ie.css
@@ -3,9 +3,21 @@
  */
 #background-image {
 	filter:alpha(opacity=80);
+	z-index: 1;
 }
 .submit {
 	filter: dropshadow(color=#000000, offx=1, offy=0);
+	overflow: visible !important;
+}
+.submit,
+.submit span {
+	background-color: #FFFFFF;
+}
+header,
+header .primary-nav-contents,
+header .secondary-nav-contents,
+ {
+	z-index:1002;
 }
 header .secondary-nav-contents ul li a {
 	filter: dropshadow(color=#000000, offx=0, offy=1);
