--- a/css/global.css
+++ b/css/global.css
@@ -62,7 +62,7 @@ footer {
 	margin: 0 auto;
 	display: block;
 	background: #000000;
-	opacity: 0.7;
+	background: rgba(0,0,0, 0.7);
 	padding: 15px 30px;
 }
 footer .navigation {
@@ -143,6 +143,7 @@ input[type=email] {
 	
 }
 textarea {
+	background-color: #f6f6f6;
 	resize: none;
 	padding: 5px;
 	border:1px solid #c1c6c8;
@@ -151,10 +152,10 @@ textarea {
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 
-  box-shadow: inset 1px 1px 10px -2px #000000;
-  -o-box-shadow: inset 1px 1px 10px -2px #000000;
-  -moz-box-shadow: inset 1px 1px 10px -2px #000000;
-  -webkit-box-shadow: inset 1px 1px 10px -2px #000000;
+  box-shadow: 				inset 1px 1px 5px 0 rgba(0, 0, 0, 0.25);
+  -o-box-shadow: 			inset 1px 1px 5px 0 rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 		inset 1px 1px 5px 0 rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: inset 1px 1px 5px 0 rgba(0, 0, 0, 0.25);
 }
 input.autoclear {
 	color: #aeaeae;
