--- a/css/nav.css
+++ b/css/nav.css
@@ -99,10 +99,10 @@ header #logo {
  */
 header .dropdown-nav-contents {
 	position: absolute;
-	right: 0;
+	right: 10px;
 	top: 0;
 	z-index: 1003;
-	padding: 0 30px 0 0;
+	padding: 0;
 	height: 30px;
 	margin: 0;
 }
@@ -113,9 +113,16 @@ header .dropdown-nav-contents ul {
 header .dropdown-nav-contents ul li a {
 	background: none repeat-x scroll 0 0 transparent;
 	z-index: 1004;
-	padding: 9px 10px;
+	padding: 10px 30px 10px 0;
 	display: block;
 	position: relative;
+	width: 140px;
+	height: 20px;
+	border: none;
+	font-size: 12px;
+	color: #444444;
+	text-align: right;
+	font-weight: bold;
 }
 header .dropdown-nav-contents ul.hover li a {
 	background-image: url(../images/bkgd_nav_dropdown_tile.png);
@@ -123,13 +130,14 @@ header .dropdown-nav-contents ul.hover li a {
 header .dropdown-nav-contents ul li {
 /*	padding: 10px;*/
 	text-align:left;
+	border: none;
 }
 header .dropdown-nav-contents ul ul {
 	z-index: 1003;
 	height: auto;
 	position: absolute;
 	top: 40px;
-	right: 30px;
+	right: 0;
 	background: none repeat-y scroll center top #FFFFFF;
 	overflow: hidden;
 	margin: 0;
@@ -154,8 +162,26 @@ header .dropdown-nav-contents ul li:hover ul {
 header .dropdown-nav-contents ul ul li {
 	z-index: 1003;
 }
-header .dropdown-nav-contents ul ul li a {
+header .dropdown-nav-contents ul ul li a,
+header .dropdown-nav-contents ul.hover ul li a {
 	z-index: 1003;
 	padding: 10px;
 	background: none no-repeat scroll 0 0 #FFFFFF;
+	font-weight: normal;
+	width:150px;
+	
+	transition: background 0.25s;
+	-o-transition: background 0.25s;
+	-moz-transition: background 0.25s;
+	-webkit-transition: background 0.25s;
+}
+header .dropdown-nav-contents ul ul li a:hover,
+header .dropdown-nav-contents ul ul li:hover {
+	background-color: #afbf45;
+}
+.dropdown-nav .ui-icon {
+	left: auto;
+	right: 5px;
+	top: 8px;
+	background-position: left bottom;
 }
