--- a/css/nav.css
+++ b/css/nav.css
@@ -32,10 +32,11 @@ header .primary-nav-contents ul li {
 	position:relative;
 }
 header .primary-nav-contents ul li a {
-	padding: 30px 20px 0;
+	padding: 30px 30px 0;
 	height:41px;
-	color:#AAAAAA;
+	color:#666666;
 	display:block;
+	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
 
 	transition: color 0.25s;
 	-o-transition: color 0.25s;
