--- a/css/global.css
+++ b/css/global.css
@@ -57,9 +57,6 @@ a {
 	display: block;
 	padding: 20px 0 20px;
 }
-.signin #main {
-	padding-top: 60px;
-}
 #main #error {
 	text-align: center;
 	height: 60px;
@@ -309,7 +306,7 @@ h4 {
 .description-summary p,
 #dialog-email .form-element select,
 #dialog-email .form-element input,
-#dialog-lease .form-element input {
+.list-form .form-element input {
 	display: block;
 	float: left;
 	width: 400px;
@@ -318,7 +315,7 @@ h4 {
 }
 #dialog-email .form-element select,
 #dialog-email .form-element input,
-#dialog-lease .form-element input {
+.list-form .form-element input {
 	padding: 1px 1px 1px 5px;	
 	width:350px;
 }
@@ -327,15 +324,15 @@ h4 {
 	height:150px;
 	margin:10px 5px;
 }
-#dialog-lease .form-element {
+.list-form .form-element {
 	clear: both;
 	padding: 10px;
 }
-#dialog-lease .form-element label {
+.list-form .form-element label {
 	float:left;
 	margin:0;
 }
-#dialog-lease .form-element input {
+.list-form .form-element input {
 	width:30px;
 }
 /* Rounded Corners/Box-shadow */
@@ -463,6 +460,10 @@ h4 {
  */
 .signin #main {
 	width:640px;
+	padding-top: 60px;
+}
+.select-a-lease #main {
+	width: 450px;
 }
 .signin .titled-box {
 	margin: 46px 0 20px;
