--- a/css/global.css
+++ b/css/global.css
@@ -66,37 +66,6 @@ a {
 #mail {
 	display:none;
 }
-footer {
-	width: 730px;
-	height: 31px;
-	margin: 0 auto;
-	display: block;
-	background: #000000;
-	background: rgba(0, 0, 0, 0.7);
-	padding: 10px 20px;
-}
-footer .navigation,
-footer .right {
-	float:right;
-}
-footer .navigation a,
-footer .right a {
-	font-size: 14px;
-	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
-	display: block;
-	padding: 5px 0 0 25px;
-}
-footer .right a.cta-dialog {
-	background: url(../images/icon_mail_simple.png) no-repeat scroll 0 8px transparent;
-}
-
-footer p,
-footer a {
-	color: #C2C2C2;
-	font-size: 10px;
-	text-decoration: none;
-	line-height: 1.5;
-}
 /**
  * Forms
  */
@@ -201,7 +170,8 @@ input.autoclear {
 }
 .form-element-right {
 	float: right !important;
-	width: 220px;
+	width: 250px;
+	text-align: right;
 }
 .form-element {
 	clear:left;
