--- a/css/accordion.css
+++ b/css/accordion.css
@@ -110,10 +110,11 @@
 	background: url(../images/icon_mail.png) no-repeat scroll 0 0 transparent;
 }
 
-.discreet-accordion-box .discreet-accordion h3 {
+/*.discreet-accordion-box .discreet-accordion h3 {
 	color: #00929F;
 	font-weight: normal;
 }
+*/
 .discreet-accordion-box .discreet-accordion {
 	overflow: hidden;
 	position: relative;
